# Project_1_Analisis_of_banking_appkications

./: README.md  pyproject.toml
src/: config.py  logger.py  main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
